gcc/testsuite/rust/rustc/ui/issues/issue-38857.rs
fn main() {
    let a = std::sys::imp::process::process_common::StdioPipes { ..panic!() };
// { dg-error ".E0603." "" { target *-*-* } .-1 }
// { dg-error ".E0603." "" { target *-*-* } .-2 }
}

